load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "layout",
    visibility = ["//blazerod/render:__subpackages__"],
    srcs = glob(["*.kt"]),
    deps = [
        "//blazerod/model/model-base"
    ],
    merge_deps = [
        "//blazerod/render/main/util/math",
    ]
)