load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "render",
    visibility = ["//blazerod/render:__subpackages__"],
    srcs = glob(["**/*.kt"]),
    deps = [
        "//blazerod/render/game:remapped_client_access_widened_named",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
        "@minecraft//:1.21.8_client_libraries",
    ],
    merge_deps = [
        "//blazerod/render/main/extension",
        "//blazerod/render/api/refcount",
        "//blazerod/render/expect",
    ],
)